# pgrts

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: CMakeLists.txt  main.cpp
src/appdata/: appdata.cpp  appdata.hpp
src/rendering/: canvas.hpp  canvas_sdl.cpp  canvas_sdl.hpp  color.cpp  color.hpp
src/tiles/tilepool/: tilepool.cpp  tilepool.hpp
src/world/: world.cpp  world.hpp
src/world/tile/: tile.hpp
src/worldgen/: worldgen.cpp  worldgen.hpp
