cmake_minimum_required(VERSION 3.24)
project(pgrts LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

add_subdirectory(src)

add_custom_target(run
    COMMAND $<TARGET_FILE:pgrts>
    DEPENDS pgrts 
    WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    COMMENT "Running..."
)
